# tex-packer

./: .gitignore  Cargo.toml  README.md
crates/tex-packer-cli/: Cargo.toml  README.md
crates/tex-packer-cli/examples/: bench_portfolio.rs  gen_assets.rs  gen_irregular.rs
crates/tex-packer-cli/src/: main.rs
crates/tex-packer-cli/src/templates/: cocos.hbs  godot.hbs  phaser3_multiatlas.hbs  phaser3_singleatlas.hbs  spine_atlas.hbs  unity.hbs  unreal.hbs
crates/tex-packer-core/: Cargo.toml  README.md
crates/tex-packer-core/benches/: runtime_strategies.rs
crates/tex-packer-core/examples/: bench_mr_reference.rs
crates/tex-packer-core/src/: compositing.rs  config.rs  error.rs  export.rs  export_plist.rs  lib.rs  model.rs  pipeline.rs  runtime.rs  runtime_atlas.rs
crates/tex-packer-core/src/packer/: guillotine.rs  maxrects.rs  mod.rs  skyline.rs
crates/tex-packer-core/tests/: boundary_conditions.rs  compose_extrude_no_bleed.rs  export_smoke.rs  force_max_and_border.rs  guillotine_rotation_fit.rs  layout_vs_images.rs  maxrects_determinism.rs  maxrects_disjoint_small.rs  maxrects_rotation_fit.rs  pack_stats.rs  padding_extrude_offsets.rs  pow2_square.rs  runtime_api_improvements.rs  runtime_atlas_tests.rs  runtime_session.rs  runtime_shelf.rs  runtime_skyline.rs  skyline_no_rotation.rs  skyline_rotation_fit.rs  skyline_waste_map.rs  transparent_policy.rs
crates/tex-packer-gui/: Cargo.toml  README.md
crates/tex-packer-gui/src/: main.rs  presets.rs  state.rs  stats.rs
crates/tex-packer-gui/src/ui/: menu_bar.rs  mod.rs  preview_panel.rs  setup_panel.rs
schemas/: tex-packer-atlas-array.schema.json  tex-packer-atlas-hash.schema.json
