[workspace]
members = [
    "crates/tex-packer-core",
    "crates/tex-packer-cli",
    "crates/tex-packer-gui",
]
resolver = "2"

[workspace.package]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Latias94/tex-packer"
homepage = "https://github.com/Latias94/tex-packer"
authors = ["Latias94"]
edition = "2021"


