[package]
name = "tex-packer-cli"
version = "0.1.0"
edition = "2021"
readme = "README.md"

[dependencies]
tex-packer-core = { path = "../tex-packer-core" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
walkdir = "2"
image = { version = "0.25", features = ["png", "jpeg"] }
serde_json = "1"
serde_yaml = "0.9"
serde = { version = "1", features = ["derive"] }
handlebars = "6"
tinyvec = "1"
globset = "0.4"
indicatif = "0.17"
rand = "0.8"

[features]
default = []
# Enable: cargo run -p tex-packer-cli --features parallel -- ...
parallel = ["tex-packer-core/parallel"]
