[package]
name = "tex-packer-core"
version = "0.1.0"
edition = "2021"
readme = "README.md"

[dependencies]
thiserror = "2"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = true, features = ["png", "jpeg"] }

[features]
default = ["image"]
parallel = ["rayon"]
image = []

[dependencies.rayon]
version = "1.10"
optional = true

[dev-dependencies]
rand = "0.8"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "runtime_strategies"
harness = false
