[package]
name = "tex-packer-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
tex-packer-core = { path = "../tex-packer-core" }
dear-imgui-rs = { package = "dear-imgui-rs", version = "0.3.0" }
dear-imgui-wgpu = { package = "dear-imgui-wgpu", version = "0.3.0" }
dear-imgui-winit = { package = "dear-imgui-winit", version = "0.3.0" }
wgpu = "26"
winit = "=0.30.12"
pollster = "0.3"
image = { version = "0.25", default-features = true, features = ["png", "jpeg", "gif", "bmp", "tiff"] }
serde_json = "1"
rfd = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

[features]
default = []
