[package]
name = "tex-packer-gui"
version = "0.1.0"
edition = "2024"
readme = "README.md"
description = "Desktop GUI for tex-packer built with egui/eframe (wgpu): load images, configure, preview, and export texture atlases."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Latias94/tex-packer"
homepage = "https://github.com/Latias94/tex-packer"
keywords = ["egui", "gui", "texture", "atlas", "packer"]
categories = ["gui", "multimedia::images", "graphics"]
authors = ["Latias94"]
exclude = [
    "Cargo.toml.orig",
    "tests/*",
    "benches/*",
    "target/*",
]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
tex-packer-core = { path = "../tex-packer-core" }
image = { version = "0.25", default-features = true, features = ["png", "jpeg", "gif", "bmp", "tiff"] }
serde_json = "1"
rfd = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
egui = "0.32"
eframe = { version = "0.32", default-features = true, features = ["wgpu"] }
egui_extras = "0.32"

[features]
default = []
